--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "nodemon app.js",
     "dev": "node app.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
